tools naming changes

--- a/src/content/docs/builders/tools/all-in-one/index.mdx
+++ b/src/content/docs/builders/tools/all-in-one/index.mdx
@@ -6,7 +6,7 @@ sidebar:
   order: 0
 ---
 
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 The All-in-One Tools page showcases versatile platforms designed to streamline and enhance your Web3 development journey. 
 
@@ -14,7 +14,7 @@ This page features a variety of features, including wallet integration, NFT mana
 
 Whether you're building dApps, managing digital assets, or scaling blockchain solutions, these tools provide everything you need in a single, convenient location.
 
-<Tools 
+<ToolsPage 
 	categories={['All In One']} 
 	searchBar = {false}
 	filters = {false}
