--- a/src/content/docs/builders/tools/bridges/index.mdx
+++ b/src/content/docs/builders/tools/bridges/index.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 Bridges play a crucial role in expanding the functionality and connectivity of various blockchain ecosystems. 
 
@@ -16,7 +16,7 @@ This piece of technology increases flexibility and efficiency by allowing decent
 The SKALE Ecosystem has different bridging solutions available to all dApps.
 
 
-<Tools 
+<ToolsPage 
 	categories={['Bridges']} 
 	searchBar = {false}
 	filters = {false}
