--- a/src/content/docs/builders/tools/libraries/index.mdx
+++ b/src/content/docs/builders/tools/libraries/index.mdx
@@ -7,13 +7,13 @@ sidebar:
 ---
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 SKALE's EVM compatibility enables developers to use a wide range of Web3 libraries in various programming languages, depending on their specific goals. 
 
 This flexibility allows seamless integration and interaction with the SKALE chains from almost any type of application, whether web, mobile, or desktop
 
-<Tools 
+<ToolsPage 
 	categories={['Libraries']} 
 	searchBar = {false}
 	filters = {false}
