--- a/src/content/docs/builders/tools/rng/index.mdx
+++ b/src/content/docs/builders/tools/rng/index.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import { LinkCard , CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 Random Number Generation (RNG) has many applications in software development [both Web2 and Web3].
 It can be used to support generation of secure credentials, support with decision making, 
@@ -18,7 +18,7 @@ the popular Chainlink VRF functionality is very common with developers building 
 
 SKALE Chains all come with the RNG endpoint available directly in Solidity with zero gas fees.
 
-<Tools 
+<ToolsPage 
 	categories={['Randomness']} 
 	searchBar = {false}
 	filters = {false}
