--- a/src/content/docs/builders/tools/contracts/index.mdx
+++ b/src/content/docs/builders/tools/contracts/index.mdx
@@ -7,7 +7,7 @@ sidebar:
 ---
 
 import { LinkCard, CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 The SKALE network ensures that most industry-standard tools and applications designed for Ethereum seamlessly integrate with SKALE. 
 
@@ -15,7 +15,7 @@ This compatibility allows developers to utilize familiar tools and frameworks, s
 
 Additionally, SKALE provides common industry contract features, including Multicall contracts.
 
-<Tools 
+<ToolsPage 
 	categories={['Contracts']} 
 	searchBar = {false}
 	filters = {false}
