--- a/src/content/docs/builders/tools/nfts/index.mdx
+++ b/src/content/docs/builders/tools/nfts/index.mdx
@@ -7,11 +7,11 @@ sidebar:
 ---
 
 import { LinkCard, CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 SKALE encompasses a comprehensive suite of tools and features specifically designed for NFTs, aimed at addressing the diverse requirements developers may encounter when creating their NFT collections.
 
-<Tools 
+<ToolsPage 
 	categories={['NFTs']} 
 	searchBar = {false}
 	filters = {false}
