--- a/src/content/docs/builders/tools/oracles/index.mdx
+++ b/src/content/docs/builders/tools/oracles/index.mdx
@@ -7,14 +7,14 @@ sidebar:
 ---
 
 import { LinkCard , CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 Oracles on blockchain serve as bridges between smart contracts and the external world, providing the necessary data for executing contract terms based on real-world events.
 
 SKALE offers a variety of oracle solutions, allowing developers to choose the most suitable options for their specific needs.
 
 
-<Tools 
+<ToolsPage 
 	categories={['Oracles']} 
 	searchBar = {false}
 	filters = {false}
