--- a/src/content/docs/builders/tools/payments/index.mdx
+++ b/src/content/docs/builders/tools/payments/index.mdx
@@ -7,11 +7,11 @@ sidebar:
 ---
 
 import { LinkCard ,CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 There's different way developers can utilize payments in their dApps. The SKALE chains have different providers to cover all those situations. 
 
-<Tools 
+<ToolsPage 
 	categories={['Payments']} 
 	searchBar = {false}
 	filters = {false}
