--- a/src/content/docs/builders/tools/wallets/index.mdx
+++ b/src/content/docs/builders/tools/wallets/index.mdx
@@ -7,13 +7,13 @@ sidebar:
 ---
 
 import {LinkCard ,CardGrid } from "@astrojs/starlight/components";
-import {Tools} from "../../../../../components/ToolsList"
+import {ToolsPage} from "../../../../../components/ToolsList"
 
 There are currently multiple types of wallets available, each designed to meet the diverse needs of different users. 
 
 The SKALE chains provide comprehensive support for these various wallet solutions, ensuring that both developers and users have access to the tools that best suit their requirements.
 
-<Tools 
+<ToolsPage 
 	categories={['Wallets']} 
 	searchBar = {false}
 	filters = {false}
