Fix Spacing on the Number Bullets

--- a/src/content/docs/ecosystem/validators/faq.mdx
+++ b/src/content/docs/ecosystem/validators/faq.mdx
@@ -82,5 +82,8 @@ A key requirement for an effective security and execution layer is a proper ince
 
 Security and validity of transactions in a chain or subchain in a second layer primarily rests with the performance and behavior of the validator nodes. To make sure the validation layer is operating properly, a network first has to have a large number of validator nodes. A small number of nodes in a network is inherently risky and fragile.
 
-In addition and as a requirement for a secure and robust network, it ideally needs to provide for 1. The random selection of chain validator sets 
+In addition and as a requirement for a secure and robust network, it ideally needs to provide for:
+
+1. The random selection of chain validator sets 
+
 2. The rotation of nodes in and out of chains on a frequent basis. Without randomness and rotation, there is a far greater risk of bribery of and/or collusion between validators, vastly reducing the security and integrity of the chains within a network.
