Simplify BIOS Verbiage

--- a/src/content/docs/ecosystem/validators/faq.mdx
+++ b/src/content/docs/ecosystem/validators/faq.mdx
@@ -13,7 +13,7 @@ To learn more checkout the article on the [SKALE Blog](https://skale.space/blog/
 
 ### Are you aware of Intel SGX-related attacks like Plundervolt, cache attacks, and other vulnerabilities?
 
-The SKALE team stays abreast of any and all security issues related to Intel SGX and takes all measures necessary to counteract them. Intel is very good at providing BIOS updates to address any security holes and prevent these types of attacks. The validator also shares responsibility in that they must continually check that their service providers are using the latest version of the BIOS. The SKALE team will keep validators abreast of security issues, recommend best practices, and work closely with validators to address these issues and more.
+The SKALE team stays abreast of any and all security issues related to Intel SGX and takes all measures necessary to counteract them. Intel is very good at providing BIOS updates to address any security holes and prevent these types of attacks. The validator also shares security responsibility for ensuring that their service providers consistently use the latest BIOS version. The SKALE team will keep validators abreast of security issues, recommend best practices, and work closely with validators to address these issues and more.
 
 ### Why the specific requirements for the disk storage and memory?
 
