Improve 3-1-1-upgrade doc

--- a/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade.mdx
+++ b/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade.mdx
@@ -56,7 +56,7 @@ The firewall mechanism was updated in version 3.1.1. As a result, please proceed
 1. Turn off the node
 
     ```bash
-    skale node turn-off --yes
+    skale node turn-off --yes --unsafe
     ```
 
 2. Backup the node
@@ -85,7 +85,7 @@ The firewall mechanism was updated in version 3.1.1. As a result, please proceed
 
 6. Make sure nftables is installed
     ```bash
-    sudo apt install nftables
+    sudo apt install nftables docker-compose-plugin
     ```
 
 7. Disable ufw ipv6 configuration
