--- a/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade.mdx
+++ b/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade.mdx
@@ -17,7 +17,7 @@ The firewall mechanism was updated in version 3.1.1. As a result, please proceed
 
 3. Clone sgxwallet repo
     ```bash
-    git clone https://github.com/skalenetwork/sgxwallet.git
+    git clone https://github.com/skalenetwork/sgxwallet.git && git checkout stable
     ```
 
 4. Install required packages
