--- a/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade-local-sgx.mdx
+++ b/src/content/docs/ecosystem/validators/releases/3-1-1-upgrade-local-sgx.mdx
@@ -66,7 +66,7 @@ The firewall mechanism was updated in version 3.1.1. As a result, please proceed
 
 9. Pull latest changes from sgxwallet
     ```bash
-    cd sgxwallet/run_sgx && git checkout stable && git pull`
+    cd sgxwallet/run_sgx && git checkout stable && git pull
     ```
 
 10. Add `-b` option in the `command` section of `run_sgx/docker-compose.yml`
