Add initial stub questions for welcome -> intro to skale

--- a/src/content/docs/welcome/intro-to-skale.mdx
+++ b/src/content/docs/welcome/intro-to-skale.mdx
@@ -3,9 +3,25 @@ title: Intro to SKALE
 description: An introduction to the SKALE Network
 ---
 
-Guides lead a user through a specific task they want to accomplish, often with a sequence of steps.
-Writing a good guide requires thinking about what your users are trying to do.
+Q: What is SKALE?
 
-## Further reading
+Q: Why does SKALE exist?
 
-- Read [about how-to guides](https://diataxis.fr/how-to-guides/) in the Diátaxis framework
+Q: Is SKALE a Layer 1, Layer 2, or Layer 3?
+
+Q: Is SKALE a sidechain?
+
+Q: Is SKALE a rollup?
+
+Q: How are there zero gas fees?
+
+Q: What is the SKL token used for?
+
+Q: Is SKALE EVM compatible?
+
+Q: Is there a main "SKALE chain"?
+
+Q: How does SKALE make money?
+
+Q: How fast is a SKALE chain?
+
