Initial Faucet Setup

--- a/src/content/docs/faucet.mdx
+++ b/src/content/docs/faucet.mdx
@@ -4,3 +4,7 @@ description: Gas Fees on SKALE
 prev: false
 next: false
 ---
+
+import { Faucet } from "../../components/Faucet";
+
+<Faucet client:load />
