Add Gasless Transactions Documentation

--- a/src/content/docs/building-applications/faqs.mdx
+++ b/src/content/docs/building-applications/faqs.mdx
@@ -1,4 +1,9 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: FAQ
+description: Frequently Asked Questions by SKALE Builders
 ---
+
+## Q: What is the difference between zero gas fees and gasless transactions?
+
+## Q: Why is zero gas fees different than account abstraction?
+
