--- a/src/content/docs/building-applications/gasless-transactions.mdx
+++ b/src/content/docs/building-applications/gasless-transactions.mdx
@@ -1,4 +1,130 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Gasless Transactions
+description: Gasless transactions are native to SKALE and enable truely invisible transactions
 ---
+
+import { Aside } from "@astrojs/starlight/components";
+
+### How Gasless Transactions Work
+
+A gasless transaction is a blockchain transaction that does not require the user to have any gas in their wallet to interact with the network.
+The steps of a gasless transaction are as follows:
+
+1. Determine the **sender address**, the **sender address nonce**, and the **gas limit** of the transaction.
+2. Use [Proof of Work](#exploring-proof-of-work) to generate a [magic number](#understanding-magic-numbers).
+3. Build the transaction with the gasPrice of the transaction set to the value of the magic number
+4. Execute the transaction, even without sFUEL in the sender's account
+
+### Exploring Proof of Work
+
+Proof of Work [on SKALE] is a method that allows wallets to *mine* sufficient amount of sFUEL to any address to send a transaction.
+The act of mining is computationally expensive and requires a user to solve a complex mathematical problem to generate a magic number.
+This computation cost is what makes it such a great deterrent from being used to spam the network since it would cost a bad actor a significant amount of money to do so.
+
+### Understanding Magic Numbers
+
+SKALE uses the concept of "the magic number" in conjunction with Proof of Work to allow the sender (i.e the client) and SKALE Chain to agree that a transaction is valid
+EVEN IF there is not a sufficient amount of sFUEL (inclusive of 0 sFUEL) in the sender's account. This also allows gasless transactions to remain fully comaptible with the
+Ethereum Virtual Machine and most popular tools.
+
+### Proof of Work Algorithm
+
+1. The client generates a random 256-bit X (i.e the magic number) by a formula which is equal to a unique gasPrice value
+
+<math display="block">
+  <mi>X</mi>
+  <mo>=</mo>
+  <mi>sha3</mi>
+  <mo stretchy="false">(</mo>
+  <mi>address</mi>
+  <mo stretchy="false">)</mo>
+  <mo>⊕</mo>
+  <mi>sha3</mi>
+  <mo stretchy="false">(</mo>
+  <mi>nonce</mi>
+  <mo stretchy="false">)</mo>
+  <mo>⊕</mo>
+  <mi>sha3</mi>
+  <mo stretchy="false">(</mo>
+  <mi>gasPrice</mi>
+  <mo stretchy="false">)</mo>
+</math>
+
+<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
+  <mi>freeGas</mi>
+  <mo>=</mo>
+  <mrow>
+    <mo stretchy="false">(</mo>
+    <mn>2</mn>
+    <msup>
+      <mn></mn>
+      <mn>256</mn>
+    </msup>
+    <mn>−1</mn>
+    <mo stretchy="false">)</mo>
+    <mo>/</mo>
+    <mi>X</mi>
+    <mo>/</mo>
+    <mi>difficulty</mi>
+  </mrow>
+</math>
+
+
+2. Check whether X is allow to run transaction
+
+<math display="block">
+  <mi>freeGas</mi>
+  <mo stretchy="false">(</mo>
+  <mi>X</mi>
+  <mo stretchy="false">)</mo>
+  <mo>&gt;</mo>
+  <mi>estimateGas</mi>
+  <mo stretchy="false">(</mo>
+  <mi>tx</mi>
+  <mo stretchy="false">)</mo>
+</math>
+
+3. If <math><mi>false</mi></math>, then back to the first step
+4. If <math><mi>true</mi></math>, then send the transaction with gasPrice = `X` and `gasLimit` = freeGas(X)
+
+<Aside type="note">
+- ⊕ is the bitwise XOR operator
+- KECCAK256(SHA3) is the hashing algorithm that should be used
+</Aside>
+
+<Aside type="caution">
+MetaMask and other popular browser wallets with which SKALE Chains are compatible do not always support gasless transaction. This is
+because the magic number generated is generally very, very large and the wallets either have a limitation on the number size or on the lack of gas in the user wallet.
+</Aside>
+
+## Popular Usecases
+
+### Invisible Transactions
+Buliding using gasless transactions allows developers to create applications that have no "blockchain" that is visible to the user.
+Creating seamless experiences that have no friction for new users is critical toward building applications that can be adopted globally and pass
+the grandma test (yes, even grandma can use it)!
+
+While invisible transactions can be done with [zero gas fees](/building-applications/zero-gas-fees) gasless transactions can really help take your dApp to the next level.
+
+### sFUEL Distribution
+sFUEL Distribution is a process that allows developers to invisibly give users gas to interact with their dApp.
+This process is critical to ensuring that users can interact with your dApp especially with the sFUEL token being unpurchasable.
+While many developers choose to lean on servers to operate the distribution, using gasless transactions allows developers to lean on public faucet infrastructure or custom
+distribution contracts that have no operational overhead. This can greatly reducde costs of operating a dApp and greatly increase security for applications that may be popular targets
+for bad actors.
+
+### True Decentralization &amp; Enhanced Security
+With sFUEL on SKALE being metered by operators and developers to properly secure the chain from being spammed; the truest path towards decentralization of your application
+is using gasless transactions. Switching or starting with the proof of work method means that you as a developer never have to worry about having "enough gas".
+
+## Community Tools
+
+| Name | Description | Language |
+| ---- | ----------- | -------- |
+| [@skaleproject/pow](https://www.npmjs.com/package/@skaleproject/pow) | Generate magic numbers using SKALE Proof of Work | JavaScript/Typescript |
+| [@skaleproject/pow-ethers](https://www.npmjs.com/package/@skaleproject/pow-ethers) | Generate and use magic numbers with Ethers v5 | JavaScript/Typescript |
+| [@skaleproject/pow-web3](https://www.npmjs.com/package/@skaleproject/pow-web3) | Generate and use magic numbers with Web3.js | JavaScript/Typescript |
+| @skaleproject/pow-ethers-v6 | Coming soon | JavaScript/Typescript |
+| @skaleproject/viem | Coming soon | JavaScript/Typescript |
+| [skale.dart](https://pub.dev/packages/skale) | Generate magic numbers with Dart | Dart |
+| [skale-gas-miner](https://github.com/cryptopia-com/skale-gas-miner) | Generate magic numbers in Unity | C++/C# |
