--- a/src/content/docs/building-applications/using-filestorage.mdx
+++ b/src/content/docs/building-applications/using-filestorage.mdx
@@ -10,7 +10,7 @@ import filestorageUploadCode from "./code/filestorageUploadScript?raw";
 
 SKALE Filestorage is the only onchain and decentralized filestorage in blockchain. The following walks through an example of how to use filestorage on your sChain.
 Interested in learning more about filestorage first? Checkout the [How Filestorage Works page](/how-skale-works/filestroage). If you are a SKALE Chain Owner or Operator,
-you can also see the [upgradeable contracts](/run-a-skale-chain/upgradeable-contracts) section to learn more about customizing your filestorage implementation.
+you can also see the [upgradeable contracts](/run-a-skale-chain/upgradeable-contracts) section to learn more about customizing your filestorage implementation. 
 
 ## Preparing Files
 
@@ -108,3 +108,5 @@ http(s)://NODE_DOMAIN_NAME/SKALE_CHAIN_NAME/FILESTORAGE_FULL_PATH
 The uploader address in the URLs MUST omit the 0x prefix AND be in lowercase.
 For example: 0x77333Da3492C4BBB9CCF3EA5BB63D6202F86CDA8 must be entered as 77333da3492c4BBB9ccf3Ea5bb63d6202f86cda8
 </Aside>
+
+Checkout [Filestorage.js](/building-applications/libraries/filestorage-js) for a deeper dive into the available functions.
