Add Pick a Chain

--- a/src/content/docs/building-applications/pick-a-chain.mdx
+++ b/src/content/docs/building-applications/pick-a-chain.mdx
@@ -1,4 +1,42 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Pick a SKALE Chain
+description: Understanding the different sChains available to developers
 ---
+
+## What is a SKALE Chain?
+
+A SKALE Chain is a layer 1 blockchain running within the SKALE Network. It leverages the networks pool of validators for shared security,
+has zero gas fees, single-slot finality, and is incredibly powerful. The truth is that not every developer or project needs their own blockchain.
+
+SKALE offers both shared and dedicated compute option to developers, similiar to most cloud providers. Analagous to a utility company, you have the 
+option to pick which makes the most sense for you.
+
+### Shared Resources (a.k.a SKALE Hubs)
+
+The SKALE Hub chains are ideal for most developers starting out. These chains consume a large portion of every SKALE Supernode, offer hundreds of transactions per second,
+hundreds of gigabytes of decentralized storage, and can host hundreds if not thousands of applications operating in parallel.
+
+The four (4) SKALE Hubs available today are:
+
+- Calypso: Consumer, Social, DePIN
+- Europa: DeFi & Liquidity
+- Nebula: Gaming
+- Titan: Artifical Intelligence (AI) & Machine Learning (ML)
+
+Feel free to pick any of them when getting started on SKALE Testnet! If you are new to building on SKALE and aren't sure where to go
+join us in [Discord](https://discord.gg/skale) and chat with the Developer Success team! Interested in running a hub for a specific niche?
+Reach out to the SKALE team in [Discord](https://discord.gg/skale)!
+
+### Dedicated Resources (a.k.a SKALE Appchain)
+
+In addition to the four SKALE Hubs, the SKALE Network as a whole is home to many application specific layer 1 blockchains.
+Each appchain is fully dedicated to an individual application (or a small subset if owned by a company or consortium). Appchains
+within the SKALE Network can be multiple different sizes and have different configurations. Interested in your own appchain? 
+Checkout the [intro to running a SKALE Chain](/run-a-skale-chain/intro-to-schains) or contact the SKALE Team in [Discord](https://discord.gg/skale).
+
+**Important Notes on Appchains**
+- New SKALE Appchains are a mostly blank slate, they do not come with anything except: Native Bridge, Native RNG, Native Filestorage (optional), Native Oracle, and the chain itself.
+- You can connect to other hub chains to access liquidity and key partners
+- All sChains are by default connected to Ethereum with the native bridge as well
+- Once your chain is up and running, your chain must stay up to date on [payments](/run-a-skale-chain/pricing-and-payments) in order to stay alive. Chains
+that are >3 months overdue on payments may be elligible for deletion
