Add Additional Questions

--- a/src/content/docs/building-applications/faqs.mdx
+++ b/src/content/docs/building-applications/faqs.mdx
@@ -3,7 +3,13 @@ title: FAQ
 description: Frequently Asked Questions by SKALE Builders
 ---
 
-## Q: What is the difference between zero gas fees and gasless transactions?
+Explore some of the most frequently asked questions (FAQs) when it comes to building applications on SKALE!
 
-## Q: Why is zero gas fees different than account abstraction?
+## FAQs
+
+### Q: What is the difference between zero gas fees and gasless transactions?
+
+### Q: Why is zero gas fees different than account abstraction?
+
+### Q
 
