change hardware requirements

--- a/src/content/docs/builders/node-operators/full-sync-node.mdx
+++ b/src/content/docs/builders/node-operators/full-sync-node.mdx
@@ -20,10 +20,11 @@ Applications are commonly read-heavy compared to writes, meaning they pull data 
 
 * A Linux x86_64 machine
 * Ubuntu 22.04
-* 8 physical cores
+* 8 vCPUs
 * 16GB RAM
 * 100GB root storage
-* 2TB attached storage
+* 256GB attached storage for MEDIUM chain
+* 2TB attached storage for LARGE chain
 
 ## Node Network Requirements
 
