--- a/src/content/docs/run-a-skale-chain/setup-requirements.mdx
+++ b/src/content/docs/run-a-skale-chain/setup-requirements.mdx
@@ -1,4 +1,6 @@
 ---
-title: Gas Fees
-description: Gas Fees on SKALE
+title: Setup Requirements
+description: Requirements for setting up a SKALE Chain
 ---
+
+## Setting up a SKALE Chain
